# brain-cleaner

./: .gitignore  .npmignore  README.es.md  README.md  app.py  builder.py  package.json  pyproject.toml  requirements.txt  scanner.py
brain_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
compilador/linux/: README.md  build.py
compilador/mac/: README.md  build.py
compilador/windows/: README.md  build.py
console/: README.md  brain-cleaner-cli.py  brain_cleaner_cli.py
