[project]
name = "brain-cleaner"
version = "1.2.5"
description = "System residue cleaner for AI tools and NPM modules"
authors = [
    {name = "Konstantin", email = "info@webdesignerk.com"},
]
dependencies = [
    "Pillow",
    "blessed",
    "customtkinter",
]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
brain-cleaner = "console.brain_cleaner_cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scanner"]
packages = ["console"]
